tests/snapshots/examples_fixtures/aoc__2025__aoc_day9_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day9_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day9_part1.flx:52:14
   |
52 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              --------------------------------------------------------------- parameter 1 has type `Array<String>`

   |              --------------------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.
== stdout ==
<not executed>
